kyverno/authorization/disallow-host-ipc-scc.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ipc
  annotations:
    policies.kyverno.io/category: SecurityContextConstraints Reccomended practices (Default)
    policies.kyverno.io/description: Sharing the host's PID namespace allows visibility of process
      on the host, potentially exposing process information. Sharing the host's IPC namespace allows
      the container process to communicate with processes on the host. To avoid pod container from
      having visibility to host process space, validate that 'hostPID' and 'hostIPC' are set to 'false'.
spec:
  validationFailureAction: enforce
  rules:
    - name: validate-hostIPC
      match:
        resources:
          kinds:
            - SecurityContextConstraints
      validate:
        message: "Use of host PID ands IPC namespaces is not allowed"
        pattern:
          =(allowHostPID): "false"
          =(allowHostIPC): "false"
