kyverno/authorization/disallow-host-ipc.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ipc
  annotations:
    policies.kyverno.io/description: Sharing the host's PID namespace allows visibility of process
      on the host, potentially exposing process information. Sharing the host's IPC namespace allows
      the container process to communicate with processes on the host. To avoid pod container from
      having visibility to host process space, validate that 'hostPID' and 'hostIPC' are set to 'false'.
spec:
  background: true
  validationFailureAction: enforce
  rules:
    - name: validate-hostIPC-scc
      match:
        resources:
          kinds:
            - SecurityContextConstraints
      exclude:
        resources:
          name: hostaccess
          name: privileged
      validate:
        message: "Creating SCC that allows host PID ands IPC namespaces in non-default scc is forbidden"
        pattern:
          =(allowHostPID): "false"
          =(allowHostIPC): "false"
    - name: validate-hostIPC-pod
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - "openshift-*"
      validate:
        message: "Use of host PID ands IPC namespaces is not allowed in pods"
        pattern:
          spec:
            =(hostPID): "false"
            =(hostIPC): "false"
